added URI attribute